--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_web_auth_2: ^2.0.3
   flutter_secure_storage: ^7.0.1
   flutter_dotenv: ^5.0.2
+  flutter_svg: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/google.svg
     - .env
   #   - images/a_dot_ham.jpeg
 
