--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_svg: ^2.0.1
   flutter_web_auth_2: ^2.0.4
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
